--- a/Frontend/SportCenterGui/SportCenterGui/src/Components/Navbar/NavbarComp.css
+++ b/Frontend/SportCenterGui/SportCenterGui/src/Components/Navbar/NavbarComp.css
@@ -4,24 +4,43 @@
 #logInButton{
     width: 157px;
     height: 45px;
-
     font-size: 20px;
     font-weight: bold;
     border: none;
     border-radius: 20px;
-
     display: flex;
     justify-content: center;
     align-items: center;
     margin-right: 5%;
-
 }
 
-
-.navButtons{
+.navButtons {
     margin-left: 5vw;
-    --bs-nav-link-font-size: 20px;
+    --bs-nav-link-font-size: 20px; /* Wykorzystanie zmiennej CSS */
+    position: relative; /* Umożliwia pozycjonowanie pseudo-elementów */
+    border-radius: 15%;
 }
+
+.navButtons::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #1ABBB1;
+    transform: scaleX(0);
+    transition: transform 0.3s ease; /* Animacja */
+    border-radius: 2px;
+}
+
+.navButtons:hover::after {
+    transform: scaleX(1);
+}
+
+/*.navButtons:hover {*/
+/*    background-color: rgba(33, 22, 22, 0.2); !* Kolor tła na hover *!*/
+/*}*/
 
 #logo{
     font-size: 30px;
