--- a/Frontend/SportCenterGui/SportCenterGui/src/Components/MainPage/MainContent/Tiles/Tiles.css
+++ b/Frontend/SportCenterGui/SportCenterGui/src/Components/MainPage/MainContent/Tiles/Tiles.css
@@ -1,7 +1,7 @@
 .tiles-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     position: relative;
     margin-bottom: 10vh;
 }
