--- a/Frontend/SportCenterGui/SportCenterGui/src/Components/MainPage/MainContent/Tiles/Tiles.css
+++ b/Frontend/SportCenterGui/SportCenterGui/src/Components/MainPage/MainContent/Tiles/Tiles.css
@@ -1,7 +1,49 @@
-.tiles-container {
-    display: flex;
-    flex-wrap: wrap;
-    /*justify-content: space-between;*/
+/*.tiles-container {*/
+/*    display: flex;*/
+/*    flex-wrap: wrap;*/
+/*    !*justify-content: space-between;*!*/
+/*    position: relative;*/
+/*    margin-bottom: 10vh;*/
+/*}*/
+
+
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 65% 30%;
+    grid-template-rows: 47% 15% 28% 28%;
+    gap: 3vh;
     position: relative;
-    margin-bottom: 10vh;
+}
+
+.grid-item {
+    background-color: #74b3a4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-size: 1.2em;
+    border-radius: 5vh;
+    position: relative;
+}
+
+.item1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.item2 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+}
+
+.item3 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+}
+
+.item4 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
 }
