--- a/Frontend/SportCenterGui/SportCenterGui/src/Components/Navbar/NavbarComp.css
+++ b/Frontend/SportCenterGui/SportCenterGui/src/Components/Navbar/NavbarComp.css
@@ -1,17 +1,11 @@
 .navbar {
     /*margin-left: 5%;*/
 }
-#logInButton{
-    width: 157px;
-    height: 45px;
+.logInButton{
+    width: 8.3vw;
+    height: 100%;
     font-size: 20px;
     font-weight: bold;
-    border: none;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 5%;
 }
 
 .navButtons {
