--- a/Frontend/SportCenterGui/SportCenterGui/src/Components/MainPage/MainContent/Tiles/Tiles.css
+++ b/Frontend/SportCenterGui/SportCenterGui/src/Components/MainPage/MainContent/Tiles/Tiles.css
@@ -25,7 +25,6 @@
     color: white;
     font-size: 1.2em;
     border-radius: 5vh;
-    position: relative;
 }
 
 .item1 {
@@ -46,4 +45,26 @@
 .item4 {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
+}
+
+.item4 > * {
+    width: 100%;
+    height: 100%;
+}
+
+
+.expanded-tile{
+    z-index: 9999;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /*bottom: 0;*/
+    /*top: 0;*/
+    border-radius: 5vh;
+}
+.expanded-tile > *{
+    width: 97.5%;
+    height: 96.7%;
+    border-radius: 5vh;
+    /*margin: 5vh;*/
 }
